Fixes to Buttongroup inner Button Component rendering as well as adding in the removal of Button Component HTMLElement from syiro.data.storage during Buttongroup generation to reduce any potential removal being done during the MutationObserver or alternativeInit calls. Introduced syiro.buttongroup.CalculateInnerButtonWidth() to bring about functional method for easily ensuring inner Buttons have the adequate width and eliminating overflow. In LESS, increased Buttongroup min-width slightly.

--- a/src/less/default-theme/button.less
+++ b/src/less/default-theme/button.less
@@ -48,7 +48,7 @@ div[data-syiro-component="button"]{ // Syiro Button Component
 div[data-syiro-component="buttongroup"]{
 		float: left;
 		height: 40px;
-		min-width: 250px; // A minimum of two buttons are required for a Button Group
+		min-width: 300px;
 		background-color: darken(@syiroBackground, 5%); // Set background color to @syiroBackground darkened by 5%
 		border-radius: 20px; // Set border-radius to 20px so we have a circular border radius on the sides
 		-webkit-border-radius: 20px; // Set webkit border-radius
@@ -59,6 +59,7 @@ div[data-syiro-component="buttongroup"]{
 
 		& > div[data-syiro-component="button"][data-syiro-component-type="basic"]{
 			float: left;
+			min-width: 0; // No minimum width
 			border-radius: 0; // No border radius
 			-webkit-border-radius: 0;
 			margin: 0; // No margin
