--- a/tests/design/css/syiro.css
+++ b/tests/design/css/syiro.css
@@ -128,7 +128,7 @@ div[data-syiro-component="button"][data-syiro-component-type="toggle"][active] {
 div[data-syiro-component="buttongroup"] {
   float: left;
   height: 40px;
-  min-width: 250px;
+  min-width: 300px;
   background-color: #ededed;
   border-radius: 20px;
   -webkit-border-radius: 20px;
@@ -137,6 +137,7 @@ div[data-syiro-component="buttongroup"] {
 }
 div[data-syiro-component="buttongroup"] > div[data-syiro-component="button"][data-syiro-component-type="basic"] {
   float: left;
+  min-width: 0;
   border-radius: 0;
   -webkit-border-radius: 0;
   margin: 0;
